--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+<div style="float:right;">
+    Logged in as <%= @user.alias %>
+</div>
+
 <p style="color: green"><%= flash[:notice] %></p>
 
 <div style="float:left;margin:10px;">
