--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -2,10 +2,13 @@
 <%=h @channel.name %>
 </h2>
 
-<table>
+<table style="width:800px;">
 <% @channel.messages.each do |m| %>
     <tr>
-        <td>
+        <td valign="top" width="110" nowrap>
+            <i><%= m.updated_at.localtime.strftime("%b %e %l:%M%p") %></i> 
+        </td>
+        <td valign="top">
             <b><%= m.poster %>:</b>
         </td>
         <td>
@@ -20,12 +23,8 @@
     <%= f.error_messages %>
 
     <p>
-    <%= f.label "name" %>
-    <%= f.text_field :poster %>
-    </p>
-    <p>
-    <%= f.label "Message" %>
-    <%= f.text_field :content %>
+    Post Message<br/>
+    <%= f.text_area :content, :size => "60x10" %>
     </p>
     <p>
     <%= f.submit 'Post' %>
