--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,4 +1,6 @@
-<%= javascript_include_tag "channel" %>
+<% content_for :head do %>
+    <%= javascript_include_tag "channel" %>
+<% end %>
 
 <script type="text/javascript">
     var currentnumber = <%= @channel.messages.count %>;
@@ -31,16 +33,16 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
     This channel has no messages.
 <% end %>
 
-<table id="messagetable" style="width:800px;">
-<% @channel.messages.each do |m| %>
+<table id="messagetable">
+<% @channel.messages.reverse.each do |m| %>
     <tr>
-        <td valign="top" width="110" nowrap>
-            <i><%= m.updated_at.localtime.strftime("%b %e %l:%M%p") %></i> 
+        <td class="datecol">
+            <%= m.pretty_updated_at %> 
         </td>
-        <td valign="top" width="40" style="text-align:right;">
-            <b><%= m.poster %>:</b>
+        <td class="namecol">
+            <%= m.poster %>:
         </td>
-        <td style="text-align:left;">
+        <td class="contentcol">
             <%= m.marked_up_content %>
         </td>
     </tr>
