--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -6,7 +6,10 @@
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Channels: <%= controller.action_name %></title>
   <%= stylesheet_link_tag 'scaffold' %>
+  <%= stylesheet_link_tag 'channels' %>
   <%= javascript_include_tag 'jquery' %>
+  <%= javascript_include_tag 'jquerycolor' %>
+  <%= yield :head %>
 </head>
 <body>
 
