--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -34,7 +34,7 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
 
     <p>
     Post Message<br/>
-    <%= f.text_area :content, :size => "60x2" %>
+    <%= f.text_area :content, :size => "60x2", :id => "msginput" %>
     </p>
     <p>
     <%= f.submit 'Post' %>
@@ -62,6 +62,17 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
     </tr>
 <% end %>
 </table>
+
+<script type="text/javascript">
+$('#msginput').keypress(function(event) 
+{
+    if (event.which == '13' && !event.shiftKey) 
+    {
+      event.preventDefault();
+      $('#new_message').submit();
+    }
+});
+</script>
 
 <hr/>
 
