--- a/app/views/layouts/messages.html.erb
+++ b/app/views/layouts/messages.html.erb
@@ -1,17 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!doctype html>  
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Messages: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Messages: <%= controller.action_name %></title>
+	<!--[if lt IE 9]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+	<%= stylesheet_link_tag 'reset' %>
+	<%= stylesheet_link_tag 'global' %>
 </head>
 <body>
 
-<p style="color: green"><%= flash[:notice] %></p>
-
-<%= yield %>
+	<p style="color: green"><%= flash[:notice] %></p>
+	
+	<%= yield %>
 
 </body>
 </html>
