--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -4,7 +4,7 @@
 
 <div style="color:blue;">
 	(debug list of all channels)
-	<ul id="channels_list>
+	<ul id="channels_list">
 	    <% @channels.each do |channel| %>
 	        <li><%= link_to channel.name, channel %></li>
 	    <% end %>
