--- a/app/views/layouts/channels.html.erb
+++ b/app/views/layouts/channels.html.erb
@@ -12,6 +12,7 @@
 	<%= stylesheet_link_tag 'channels' %>
 	<%= javascript_include_tag 'jquery' %>
 	<%= javascript_include_tag 'jquerycolor' %>
+	<%= javascript_include_tag 'jquery.form' %>
 	<%= yield :head %>
 </head>
 <body>
