--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -29,6 +29,34 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
 
 <hr/>
 
+<% if @channel.messages.size == 0 %>
+    This channel has no messages.
+<% end %>
+
+<table id="messagetable">
+    <% prev_message = nil %>
+    <% @channel.messages.each do |m| %>
+        <tr id="message_<%= m.id %>">
+            <td class="datecol">
+                <% if prev_message.nil? or prev_message.poster != m.poster %>
+                    <%= m.pretty_updated_at %> 
+                <% end %>
+            </td>
+            <td class="namecol">
+                <% if prev_message.nil? or prev_message.poster != m.poster %>
+                    <%= m.poster %>:
+                <% end %>
+            </td>
+            <td class="contentcol">
+                <%= m.marked_up_content %>
+            </td>
+        </tr>
+        <% prev_message = m %>
+    <% end %>
+</table>
+
+<hr/>
+
 <% form_for [@channel, @message] do |f| %>
     <%= f.error_messages %>
 
@@ -40,41 +68,23 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
 
 <a href="javascript:submitPost();">Post</a>
 
-<hr/>
-
-<% if @channel.messages.size == 0 %>
-    This channel has no messages.
-<% end %>
-
-<table id="messagetable">
-    <% prev_message = nil %>
-<% @channel.messages.reverse.each do |m| %>
-    <tr>
-        <td class="datecol">
-            <%= m.pretty_updated_at %> 
-        </td>
-        <td class="namecol">
-            <% if prev_message.nil? or prev_message.poster != m.poster %>
-                <%= m.poster %>:
-            <% end %>
-        </td>
-        <td class="contentcol">
-            <%= m.marked_up_content %>
-        </td>
-    </tr>
-    <% prev_message = m %>
-<% end %>
-</table>
-
 <script type="text/javascript">
     // attach handler to form's submit event 
 
 function submitPost()
 {
-      $('#new_message').ajaxSubmit();
-      //addMessageToTable("<%= @user.alias %>", "", $('#msginput').val());
-      $('#msginput').val("");
-      getNewMessages(<%= @channel.id %>);
+    var text = $('#msginput').val();
+    var options = 
+    {
+        dataType: 'json',
+        success:    function(data, stat)
+        {
+            addMessageToTable(data['id'],"<%= @user.alias %>", "", text);
+        }
+    };
+    $('#new_message').ajaxSubmit(options);
+    $('#msginput').val("");
+    //getNewMessages(<%= @channel.id %>);
 
 }
 
