Upgrade to rails 3.0

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,6 +1,6 @@
 <h1>User#login</h1>
 
-<% form_tag('/user/login') do %>
+<%= form_tag('/user/login') do %>
 <h3>Login</h3>  
 
 <label for="user_alias">Username:</label><br/>
