--- a/app/views/user/register.html.erb
+++ b/app/views/user/register.html.erb
@@ -1,6 +1,6 @@
 <h1>User#register</h1>
 
-<% form_for(@user, :url => 'register') do |f| %>
+<%= form_for(@user, :url => 'register') do |f| %>
 
 <%= f.error_messages %><br/>
 
