--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -15,7 +15,7 @@
 <div>
 Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
     <div>
-        <% form_tag('add_user') do %>
+        <%= form_tag('add_user') do %>
             Add user:
             <%= text_field :user, :alias, :value => "" %>
             <%= hidden_field_tag :id, @channel.id %>
@@ -29,9 +29,7 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
 
 <hr/>
 
-<% form_for [@channel, @message] do |f| %>
-    <%= f.error_messages %>
-
+<%= form_for [@channel, @message] do |f| %>
     <p>
     Post Message<br/>
     <%= f.text_area :content, :size => "100x4", :id => "msginput" %>
