--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -44,28 +44,24 @@ Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %>
     This channel has no messages.
 <% end %>
 
-<table id="messagetable">
+<div id="messages">
     <% prev_message = nil %>
+    <ul id="message_list">
     <% @channel.grouped_messages.each do |group| %>
-        <tr>
-            <td class="datecol">
-                <%= group.date %> 
-            </td>
-            <td class="namecol">
-                <%= group.poster %>:
-            </td>
-            <td class="contentcol">
-                <ul>
+        	<li class="message_row">
+            <div class="meta">
+            	<p class="username"><%= group.poster %>:</p>
+			<p class="date"><%= group.date %></p>
+            </div>
+            <div class="message_content">
                     <% group.messages.reverse.each do |m| %>
-                        <li id="message_<%= m.id %>">
-                        <%= m.marked_up_content %>
-                        </li>
+                        <p id="message_<%= m.id %>"><%= m.marked_up_content %></p>
                     <% end %>
-                </ul>
-            </td>
-        </tr>
+            </div>
+            </li>
     <% end %>
-</table>
+    </ul>
+</div>
 
 
 <script type="text/javascript">
