more stylesheet updates

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -88,7 +88,7 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}
 	width: 100%;
 }
 
-#message_row {
+#message_list .message_row {
 	clear: both;
 	list-style: none;
 	width: 100%;
@@ -96,30 +96,30 @@ p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}
 	border-bottom: 1px dotted #ccc;
 }
 
-#message_row .meta {
+#message_list .message_row .meta {
 	float: left;
 	width: 15%;
 	text-align: right;
 }
-#message_row .meta p {
+#message_list .message_row .meta p {
 	text-align: right;
 	padding-right: 10px;
 }
-#message_row .meta .username {
+#message_list .message_row .meta .username {
 	font-weight: bold;
 	color: #cc0000;
 	font-size: 12px;
 }
-#message_row .meta .date {
+#message_list .message_row .meta .date {
 	color: #666;
 	font-size: 11px;
 }
 
-#message_row .message_content {
+#message_list .message_row .message_content {
 	float: right;
 	width: 85%;
 }
-#message_row .message_content {
+#message_list .message_row .message_content {
 	padding: 0 0 5px;
 	color: #222;
 }
