--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -6,6 +6,13 @@
     var currentnumber = <%= @channel.messages.count %>;
     $(document).ready(function(){waitForMsg(<%= @channel.id %>);});
 </script>
+<div id="group_details">
+<div class="top_controls">
+	<div class="users_in_channel">Users in channel: <% @channel.users.each do |u| %> <%= u.alias %> <% end %></div>
+	<div class="leave_channel"><% if @channel.users.include? @user %>
+	    <%= link_to "Leave Channel", "/channels/leave_channel/#{@channel.id}" %>
+	<% end %></div>
+</div>
 
 <div id="message_post">
 <h2><%=h @channel.name %></h2>
@@ -70,7 +77,7 @@ $('#msginput').keypress(function(event)
 });
 </script>
 
-<ul class="footer_controls">
+<ul class="bottom_controls">
 
 <li><%= link_to 'Edit', edit_channel_path(@channel) %></li>
 <li><%= link_to 'Delete Channel', @channel, :confirm => 'Are you sure?', :method => :delete %></li>
