--- a/app/views/channels/index.html.erb
+++ b/app/views/channels/index.html.erb
@@ -9,7 +9,7 @@
 		</ul>
 	</div>
 	
-	<div id="user_list>
+	<div id="user_list">
 		<h4>Users</h4>
 		<ul class="user_list">
 		    <% @users.each do |user| %>
